# project-invoicer

./: .gitignore  debug-data.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.js  project_tree.txt  render.yaml  tailwind.config.js  tailwind.config.js.jav  vite.config.js
src/: App.vue  App.vue.bak  index.css  main.js  style.css
src-tauri/: Cargo.toml  music_library.db  tauri.conf.json  tauri.conf.json.bak
src-tauri/capabilities/: default.json
src-tauri/src/: database.rs  main.rs  main.rs.bak  music.rs  pdf_generator.rs
src/components/: AddContentModal.vue  ArtistDetailView.vue  ArtistProfileView.vue  ArtistSongsView.vue  ArtworkImage.vue  AudioVisualizer.vue  ContextMenu.vue  CredentialsModal.vue  DynamicPage.vue  DynamicSidebar.vue  EnhancedInvoiceForm.vue  InviteModal.vue  NowPlayingBar.vue  PaginationControls.vue  PlaylistView.vue  PreferencesModal.vue  RealtimeIndicator.vue  SelectableList.vue  SidebarPlaylists.vue  TagManager.vue  TimeTracker.vue  Toast.vue  UnifiedContentModal.vue  UnifiedModal.vue  allsongsview.vue  artistsview.vue  homeview.vue  layouteditor.vue  playlistdetailview.vue  playlistsview.vue  styleeditor.vue
src/components/auth/: LoginView.vue
src/components/page-templates/: FolderPageTemplate.vue  ListPageTemplate.vue  TimelinePageTemplate.vue
src/components/templates/: AssetLibraryTemplate.vue  CalendarPageTemplate.vue  DashboardPageTemplate.vue  FolderPageTemplate.vue  GridPageTemplate.vue  IdeasPageTemplate.vue  ListPageTemplate.vue  MoodBoardTemplate.vue  ProfilePageTemplate.vue  TimelinePageTemplate.vue
src/composables/: useAuth.js  useContextMenu.js  useContextMenu.js.bak  useDragReorder.js  useFolderDragDrop.js  usePlaybackIntegration.js  usePreferences.js  useRealtimeSubscription.js  useSelection.js
src/layouts/: ArtistLayout.vue  MainLayout.vue
src/lib/: supabase.js
src/pages/: library.vue  nowplaying.vue
src/router/: authGuard.js  index.js
src/services/: audioEngine.js  audioplayer.js  pdfGenerator.js
src/store/: artistStore.js  authStore.js  budgetItemStore.js  budgetStore.js  dragddrop.js  dragdrop.js  expenseStore.js  index.js  invoiceStore.js  library.js  music.js  playback.js  projectStore.js  timeTrackingStore.js  toast.js  tree.js
src/stores/: music.js
src/utils/: cache.js  csrf.js  dragDropHelper.js  importFiles.js  pagination.js  passwordValidation.js  performanceMonitor.js  rateLimiter.js  sessionManager.js  toast.js
src/views/: AllInvoicesView.vue  AllProjectsView.vue  ArtistArchivedView.vue  ArtistInvoicesView.vue  ArtistListView.vue  ArtistOverviewView.vue  ArtistProjectsView.vue  ArtistTrashView.vue  AuthCallbackView.vue  BudgetDetailView.vue  FirstTimeSetupView.vue  InvoiceImportView.vue  LoginView.vue  PasswordResetView.vue  ProjectBudgetsView.vue  SignUpView.vue  UserManagementView.vue
supabase/: config.toml
supabase/functions/admin-create-user/: index.ts
supabase/functions/invite-users/: deno.json  index.ts
supabase/migrations/: 20240115_add_performance_indexes.sql  20240115_add_rls_policies.sql  20240116_add_rls_policies.sql  20240117_fix_rls_recursion.sql  20240118_temporary_disable_rls.sql  20240119_enhance_invoices_and_tracking.sql
